--- a/src/assets/css/fonts/fonts.css
+++ b/src/assets/css/fonts/fonts.css
@@ -1,6 +1,6 @@
 
 @font-face {
-  font-family: "proxima-nova";
+  font-family: 'proxima-nova';
   src: url("https://fonts.luna1.co/proxima-nova/ProximaNova-RegWeb.eot");
   src: url("https://fonts.luna1.co/proxima-nova/ProximaNova-RegWeb.eot#iefix") format("embedded-opentype"),
        url("https://fonts.luna1.co/proxima-nova/ProximaNova-RegWeb.woff") format("woff");
@@ -8,7 +8,7 @@
 }
 
 @font-face {
-  font-family: "haptik";
+  font-family: 'haptik';
   src: url("https://fonts.luna1.co/haptik/GT-Haptik-Regular.eot");
   src: url("https://fonts.luna1.co/haptik/GT-Haptik-Regular.eot#iefix") format("embedded-opentype"),
        url("https://fonts.luna1.co/haptik/GT-Haptik-Regular.woff") format("woff");
