adds material cards as POC

--- a/src/app/blog-list/blog-list.component.html
+++ b/src/app/blog-list/blog-list.component.html
@@ -1,3 +1,18 @@
-<p>
-  blog works!
-</p>
+
+
+<div class="mdc-card">
+  <section class="mdc-card__primary">
+    <div class="demo-card__avatar"></div>
+    <h1 class="mdc-card__title mdc-card__title--large">Title goes here</h1>
+    <h2 class="mdc-card__subtitle">Subtitle here</h2>
+  </section>
+  <section class="mdc-card__media"></section>
+  <section class="mdc-card__supporting-text">
+    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+    tempor.
+  </section>
+  <section class="mdc-card__actions">
+    <button class="mdc-button mdc-button--compact mdc-card__action">Action 1</button>
+    <button class="mdc-button mdc-button--compact mdc-card__action">Action 2</button>
+  </section>
+</div>
