--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -5,3 +5,20 @@
     <!-- <img class="image" src="https://upload.wikimedia.org/wikipedia/commons/f/f6/Pembroke_Welsh_Corgi_Puppy.jpg" alt=""> -->
   </section>
 </div>
+
+<div class="blog-list-container" style="margin:16px;padding:8px;">
+  <blog-list></blog-list>
+</div>
+
+<div class="test">
+  <!-- <div role="progressbar" class="mdc-linear-progress">
+    <div class="mdc-linear-progress__buffering-dots"></div>
+    <div class="mdc-linear-progress__buffer"></div>
+    <div class="mdc-linear-progress__bar mdc-linear-progress__primary-bar">
+      <span class="mdc-linear-progress__bar-inner"></span>
+    </div>
+    <div class="mdc-linear-progress__bar mdc-linear-progress__secondary-bar">
+      <span class="mdc-linear-progress__bar-inner"></span>
+    </div>
+  </div> -->
+</div>
